Add dodgy accessibility for testing GDP

--- a/index.html
+++ b/index.html
@@ -24,7 +24,15 @@ testEq = eq conj (0,1);
 sort output conj (0,2,1,3);
 </textarea>
   <pre id="code"></pre>
+  
+<form>
+Name:<input type="text" name="name">
+</form>
+
+<a href="https://www.google.com">Google</a>
 </div>
+
+
 
 </body>
 </html>
