Add icons with different contrast levels

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link href="styles.css" rel="stylesheet"></link>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="script.js"></script>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
 </head>
 <body>
 <div id="page-header">
@@ -30,6 +32,12 @@ Name:<input type="text" name="name">
 </form>
 
 <a href="https://www.google.com">Google</a>
+
+<p>Black on white: <span class="glyphicon glyphicon-envelope" id="envelope-icon"></span></p>
+<p>Contrast sufficient: <span class="glyphicon glyphicon-print" id="print-icon"></span></p>
+<p>Contrast too low: <span class="glyphicon glyphicon-search" id="search-icon"></span></p>
+
+
 </div>
 
 
