Remove old syntax highlighter textarea and change heading

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 </head>
 <body>
 <div id="page-header">
-  <h1>Qaret Syntax Highlighter!</h1>
+  <h1>Accessibility Checker Test Website</h1>
 </div>
 
 <div id="highlighter">
-<textarea id="codeArea" placeholder="Write your code here"onkeyup="update()" rows="8" cols="45">// Write your code here
+<!--<textarea id="codeArea" placeholder="Write your code here"onkeyup="update()" rows="8" cols="45">// Write your code here
 A = read A;
 B = read B;
 conj = A ^ B;
@@ -26,7 +26,7 @@ testEq = eq conj (0,1);
 sort output conj (0,2,1,3);
 </textarea>
   <pre id="code"></pre>
-  
+-->
 <form>
 Name:<input type="text" name="name">
 </form>
