Change font colour too

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@ Name:<input type="text" name="name">
 
 <a href="https://www.google.com">Google</a>
 
-<p>Black on white: <span class="glyphicon glyphicon-envelope" id="envelope-icon"></span></p>
-<p>Contrast sufficient: <span class="glyphicon glyphicon-print" id="print-icon"></span></p>
-<p>Contrast too low: <span class="glyphicon glyphicon-search" id="search-icon"></span></p>
+<p>Max contrast: <span class="glyphicon glyphicon-envelope" id="envelope-icon"></span></p>
+<p id="print-icon">Contrast sufficient: <span class="glyphicon glyphicon-print" id="print-icon"></span></p>
+<p id="search-icon">Contrast too low: <span class="glyphicon glyphicon-search" id="search-icon"></span></p>
 
 </div>
 
