--- a/index.html
+++ b/index.html
@@ -11,6 +11,112 @@
   <script src="script.js"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
+  <style>
+    body {
+  margin: 0;
+  font-size: 12pt;
+}
+
+#page-header {
+  background-color: rgb(255, 184, 0);
+  padding: 10px 10px 10px 10px;
+  margin-left: 0px;
+  width: 100%;
+}
+
+h1 {
+  color: #ffffff;
+  text-align: center;
+  font-family: 'Ubuntu', sans-serif;
+  font-size: 36pt;
+}
+
+pre {
+  text-align: left;
+}
+
+textarea {
+  resize: both;
+  overflow: auto;
+  border-style: dashed;
+  font-size: 12pt;
+  outline-color: rgb(255, 184, 0);
+}
+
+#highlighter {
+  background-color: white;
+  display: inline-block;
+  text-align: center;
+  padding-top: 40px;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%,0%);
+}
+
+.read {
+  color: red;
+}
+
+.output {
+  color: blue;
+}
+
+.eq {
+  color: rgb(14, 126, 0);
+}
+
+.conj {
+  color: rgb(255, 92, 0);
+}
+
+.comment {
+  color: grey;
+}
+
+.equals {
+  color: rgb(108, 176, 255);
+}
+
+.num {
+  color: rgb(212, 0, 133);
+}
+
+:focus {
+  outline: none;
+}
+
+a {
+  outline: thin dotted black;
+}
+
+.badContrast { 
+  color: #BFBFBF;
+}
+
+.goodContrast {
+  color: #919191;
+}
+
+.white {
+  color: white;
+}
+
+.glyphicon {
+  color: black;
+}
+
+#search-icon {
+  color: #B5B5B5;
+}
+
+#print-icon {
+  color: #878787;
+}
+
+#github2 {
+  fill: #B5B5B5;
+}
+  </style>
 </head>
 <body>
 <div id="page-header">
@@ -39,7 +145,7 @@ Name:<input type="text" name="name">
 
 <svg id="github1" class="octicon octicon-mark-github v-align-middle" height="32" viewBox="0 0 16 16" version="1.1" width="32" aria-hidden="true"><path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"></path></svg>
 <svg id="github2" class="octicon octicon-mark-github v-align-middle" height="32" viewBox="0 0 16 16" version="1.1" width="32" aria-hidden="true"><path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"></path></svg>
-
+<img src="Cat_poster_1.jpg" alt="cat poster" />
 </div>
 
 </body>
