--- a/index.html
+++ b/index.html
@@ -11,112 +11,6 @@
   <script src="script.js"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
-  <style>
-    body {
-  margin: 0;
-  font-size: 12pt;
-}
-
-#page-header {
-  background-color: rgb(255, 184, 0);
-  padding: 10px 10px 10px 10px;
-  margin-left: 0px;
-  width: 100%;
-}
-
-h1 {
-  color: #ffffff;
-  text-align: center;
-  font-family: 'Ubuntu', sans-serif;
-  font-size: 36pt;
-}
-
-pre {
-  text-align: left;
-}
-
-textarea {
-  resize: both;
-  overflow: auto;
-  border-style: dashed;
-  font-size: 12pt;
-  outline-color: rgb(255, 184, 0);
-}
-
-#highlighter {
-  background-color: white;
-  display: inline-block;
-  text-align: center;
-  padding-top: 40px;
-  position: absolute;
-  left: 50%;
-  transform: translate(-50%,0%);
-}
-
-.read {
-  color: red;
-}
-
-.output {
-  color: blue;
-}
-
-.eq {
-  color: rgb(14, 126, 0);
-}
-
-.conj {
-  color: rgb(255, 92, 0);
-}
-
-.comment {
-  color: grey;
-}
-
-.equals {
-  color: rgb(108, 176, 255);
-}
-
-.num {
-  color: rgb(212, 0, 133);
-}
-
-:focus {
-  outline: none;
-}
-
-a {
-  outline: thin dotted black;
-}
-
-.badContrast {
-  color: #BFBFBF;
-}
-
-.goodContrast {
-  color: #919191;
-}
-
-.white {
-  color: white;
-}
-
-.glyphicon {
-  color: black;
-}
-
-#search-icon {
-  color: #B5B5B5;
-}
-
-#print-icon {
-  color: #878787;
-}
-
-#github2 {
-  fill: #B5B5B5;
-}
-  </style>
 </head>
 <body>
 <div id="page-header">
@@ -124,18 +18,19 @@ a {
 </div>
 
 <div id="highlighter">
-<!--<textarea id="codeArea" placeholder="Write your code here"onkeyup="update()" rows="8" cols="45">// Write your code here
-A = read A;
-B = read B;
-conj = A ^ B;
-testEq = eq conj (0,1);
-sort output conj (0,2,1,3);
-</textarea>
-  <pre id="code"></pre>
--->
+
 <form>
-Name:<input type="text" name="name">
+Name:<input id="input1" type="text" name="name">
 </form>
+
+<form>
+  Name:<input id="input2" type="text" name="name">
+</form>
+
+<form>
+  Name:<input id="input3" type="text" name="name">
+</form>
+
 
 <a href="https://www.google.com">Google</a>
 
