Complete profile section and add some content for other sections (and gitignore DS_Store)

--- a/index.html
+++ b/index.html
@@ -41,14 +41,21 @@
     </div>
   </nav>
 
-  <div id="intro" class="section alternate1">
-    Picture of myself and introduction as Graduate Software Developer
+  <div id="profile" class="section alternate1">
+    <img id="profile-img" src="profile.jpg" alt="Picture of me">
+    <br>
+    <h1>Hi, I'm Jason Barrett</h1>
+    <h2>Computer Science Graduate; Software Developer</h2>
   </div>
 
   <div id="about-me" class="section alternate2">
     <h2>ABOUT ME</h2>
     <hr/>
-    Paragraph about myself & my interests...
+    I am an enthusiastic MEng Computer Science Graduate from the University of Southampton.
+    Determined to learn more about software development, I have undertaken multiple summer internships 
+    during my time at university. Last summer I completed an internship as a software development 
+    engineer at Amazon Alexa. I have wide-ranging interests including competitive cycling, 
+    running, football and photography. 
   </div>
 
   <div id="experience" class="section alternate1">
@@ -60,7 +67,16 @@
   <div id="education" class="section alternate2">
     <h2>EDUCATION</h2>
     <hr/>
-    University (incl. grade & interesting projects), A-levels...
+    <div class="timeline">
+      <ul class="timeline-items">
+        <li class="timeline-item">
+          2016-2020 - MEng Computer Science, 1st Class at University of Southampton
+        </li>
+        <li class="timeline-item">
+          2014-2016 - A-levels: A*AA in Maths, Further Maths and Physics
+        </li>
+      </ul>
+    </div>
   </div>
 
   <!-- Hobbies, cycling, etc. ? Link Strava? -->
