--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,7 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png">
 		<link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet'>
 		<link href="css/global.css" rel="stylesheet">
+		<title>Jason Barrett - Software Engineer</title>
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
